# AutoSummarize

./: .dockerignore  .gitignore  .python-version  Dockerfile  README.md  TESTING_CHECKLIST.md  TODO.md  app.py  compose.yml  config.py  database.py  example.py  history.json  main.py  models.py  pyproject.toml  requirements.txt  settings.json  settings.py  tasks.py
backup/: base_old.html  bot.py  history_backup.html  index_backup.html  settings_backup.html  settings_old.html
instance/: autosummarize.db
legacy/: config.py  main.py
processing/: gemini_processor.py  media_handler.py  media_splitter.py
templates/: base.html  base_new.html  history.html  history_new.html  history_old.html  index.html  settings.html  settings_new.html
templates/components/: dark_mode_toggle.html  navigation.html
templates/components/modals/: job_modal.html
templates/pages/: history.html
